index 생성 및 memodoc

--- a/nodeExEjs1_backend/views/index.ejs
+++ b/nodeExEjs1_backend/views/index.ejs
@@ -1,8 +1,17 @@
 <%- include ./header %>
 
-
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+            <!-- container -->
+            <div id="container">
+                <div class="innerwrap">
+					<!-- 왼쪽컨텐츠 -->
+					<ul class="left_ul"></ul>
+					<!-- //왼쪽컨텐츠 -->
+					<!-- 오른쪽컨텐츠 -->
+					<ul class="right_ul"></ul>
+					<!-- //오른쪽컨텐츠 -->
+                </div>
+			</div>
+			<!-- //container -->
 
 
 <%- include ./footer %>
